k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-backend
                port:
                  number: 8081
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: svc-backend
                port:
                  number: 8081
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: svc-backend
                port:
                  number: 8081
